--- a/LawyerProject/app/build.gradle
+++ b/LawyerProject/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('libs/httpmime-4.3.3.jar')
+    compile project(':slidingmenulibrary2')
 }
