--- a/LawyerProject/app/src/main/AndroidManifest.xml
+++ b/LawyerProject/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.ContactUsActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.FeedbackActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
