--- a/LawyerProject/app/src/main/AndroidManifest.xml
+++ b/LawyerProject/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.FeedbackActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.PersonActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.SelectDialogActivity"
+            android:theme="@style/ActivityDialogStyle" />
     </application>
 
 </manifest>
