--- a/LawyerProject/app/build.gradle
+++ b/LawyerProject/app/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.1.1'
-
+    buildToolsVersion '21.1.2'
     defaultConfig {
         applicationId "com.lawyer.android"
         minSdkVersion 15
@@ -16,6 +15,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
