--- a/LawyerProject/app/src/main/AndroidManifest.xml
+++ b/LawyerProject/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.PersonActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.UpdatePasswordActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.SelectDialogActivity"
             android:theme="@style/ActivityDialogStyle" />
