--- a/LawyerProject/wheelviewlibrary/build.gradle
+++ b/LawyerProject/wheelviewlibrary/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    buildToolsVersion "21.1.2"
+
     defaultConfig {
-        applicationId "com.lawyer.android"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
@@ -16,14 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('libs/httpmime-4.3.3.jar')
-    compile project(':slidingmenulibrary2')
-    compile project(':wheelviewlibrary')
 }
