--- a/LawyerProject/app/build.gradle
+++ b/LawyerProject/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile project(':wheelviewlibrary')
     compile project(':datetimelibrary')
     compile files('libs/httpmime-4.2.1.jar')
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 }
