--- a/LawyerProject/app/src/main/AndroidManifest.xml
+++ b/LawyerProject/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name=".base.MyApplication"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.SplashActivity"
@@ -59,6 +60,8 @@
         <activity android:name=".activity.UpdatePasswordActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.UpdatePersonActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.UserActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.WheelDialogAvtivity"
